--- a/src/app.css
+++ b/src/app.css
@@ -1,13 +1,13 @@
 
-.chatkit-sp {
+.chatux-sp {
     height: 100vh;
 }
 
-.chatkit-btn-chat-pc {
+.chatux-btn-chat-pc {
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 }
 
-.chatkit-btn-chat {
+.chatux-btn-chat {
     border-radius: 50%;
     text-align: center;
     vertical-align: middle;
@@ -20,7 +20,7 @@
     opacity: 0;
 }
 
-.chatkit-btn-chat:hover {
+.chatux-btn-chat:hover {
     color: #fff;
     background-color: #0069d9;
     border-color: #0062cc;
@@ -28,17 +28,17 @@
 
 }
 
-.chatkit-btn-on {
+.chatux-btn-on {
     opacity: 1;
 }
 
-.chatkit-scrn-on {
+.chatux-scrn-on {
     transition: transform 0.2s linear, opacity 0.3s;
     transform: scale(1.0);
     opacity: 1;
 }
 
-.chatkit-scrn-off {
+.chatux-scrn-off {
     transition: transform 0.2s linear, opacity 0.3s;
     transform: scale(0.0);
     opacity: 0;
