--- a/src/app.css
+++ b/src/app.css
@@ -8,6 +8,7 @@
 }
 
 .chatux-btn-chat {
+    box-shadow: 2px 3px 6px rgba(0, 0, 0, .4);
     border-radius: 50%;
     text-align: center;
     vertical-align: middle;
